--- a/Projects/Project-02/style_landing.css
+++ b/Projects/Project-02/style_landing.css
@@ -14,6 +14,17 @@ body {
     display: inline-block;
     }
 
+ .h2 {
+      font-family: 'BaseMono';
+      margin: 1.5em 1.5em 1em 1.5em;
+    }
+
+        
+  p {
+        font-family: 'BaseMono';
+    }
+
+
 a:visited{
     color: white;
     text-decoration: none;
