--- a/Exercises/Exercise-09/css/style.css
+++ b/Exercises/Exercise-09/css/style.css
@@ -1,44 +1,9 @@
 @import url();
 
 body {
-    background: lightblue;
+
 }
 
-.container{
-    width:100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
-}
-
-.shape{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: black;
-}
-
-@media screen and (max-width:768px) and (orientation:landscape) {
-    
-    body{
-        background-color: lightpink;
-    }
-    
-    .container{
-        flex-direction: row;
-    }
-    
-    .shape{
-        width:100%;
-        height:100%;
-        border-radius: 10%;
-        background-color: mintcream;
-    }
-}
 /* Text
 -------------------------------------------------- */
 
@@ -53,19 +18,26 @@ body {
 -------------------------------------------------- */
 @media only screen and (min-width : 768px) and (max-width : 1024px) {
 
-  /* text */
+	body{
+		background-color: lightpink;
+	}
 
+	.container{
+		flex-direction: row;
+            background-image:url(https://media.tenor.com/QDUmjSu6eNkAAAAC/rambunctious-fresh-prince.gif);
+    background-size:cover;
+	}
 
-  /* image */
-
+	.shape{
+		width: 100px;
+		height: 100px;
+		border-radius: 0%;
+		background-color: mintcream;
+	}
 }
-
-/* Mobile
 -------------------------------------------------- */
 
 @media screen and (max-width: 768px) {
-
-  /* text */
 
   /* image */
 
